# cs123-hw1-2-raster

./: CMakeLists.txt  README.md  canvas2d.cpp  canvas2d.h  mainwindow.cpp  mainwindow.h  rgba.h  settings.cpp  settings.h  submission-brush.md  submission-filter.md
student_outputs/: README.md
